--- a/GameEngineTest1/GameEngineTest1.vbproj
+++ b/GameEngineTest1/GameEngineTest1.vbproj
@@ -103,6 +103,12 @@
     <Compile Include="AudioSettings.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="GameWindow.Designer.vb">
+      <DependentUpon>GameWindow.vb</DependentUpon>
+    </Compile>
+    <Compile Include="GameWindow.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="GraphicsSettings.Designer.vb">
       <DependentUpon>GraphicsSettings.vb</DependentUpon>
     </Compile>
@@ -162,6 +168,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AudioSettings.resx">
       <DependentUpon>AudioSettings.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GameWindow.resx">
+      <DependentUpon>GameWindow.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GraphicsSettings.resx">
       <DependentUpon>GraphicsSettings.vb</DependentUpon>
