Attempted to add loading levels from files.

--- a/GameEngineTest1/GameEngineTest1.vbproj
+++ b/GameEngineTest1/GameEngineTest1.vbproj
@@ -780,7 +780,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Level1MapData.txt">
+    <None Include="Resources\DebugRoomMapData.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
